correcting styles and scrollbars

--- a/src/pages/MainPage/MPParagraphs/index.styl
+++ b/src/pages/MainPage/MPParagraphs/index.styl
@@ -26,13 +26,4 @@
     width 34%
     overflow-y auto
 
-::-webkit-scrollbar  
-    width 11px 
 
-::-webkit-scrollbar-track  
-    background white
-
-::-webkit-scrollbar-thumb 
-    background #dedede
-    border-radius 8px
-    border 2px solid white
