--- a/src/pages/MainPage/index.styl
+++ b/src/pages/MainPage/index.styl
@@ -11,7 +11,7 @@
     display flex
     flex-direction row
     flex 1
-    height 91%
+    height 100%
 
 .mainPage-header 
     display flex
