--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -1,2 +1,17 @@
 .wrapper
     height 100vh
+
+::-webkit-scrollbar  
+    width 11px 
+    height 11px
+
+::-webkit-scrollbar-track  
+    background white
+
+::-webkit-scrollbar-thumb 
+    background #dedede
+    border-radius 8px
+    border 2px solid white
+
+::-webkit-scrollbar-thumb:hover
+        background #c7c7c7
